# src/main/resources/api.yaml
@@ -490,21 +490,38 @@ paths:
           description: User do not have permissions to get quiz binding
         '404':
           description: Quiz not found
-  /permissions/resources/{resourceId}:
+  /permissions/resources/{resourceType}/{resourceId}/users:
+    get:
+      summary: get permissions to some resource
+      operationId: getPermissionsToResource
+      tags:
+        - permissions
+      parameters:
+        - $ref: '#/components/parameters/resourceType'
+        - $ref: '#/components/parameters/resourceId'
+      responses:
+        '200':
+          description: Permissions to resource
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PermissionSummaryDto'
+        '400':
+          description: Bad request
+        '403':
+          description: User do not have permission to get permissions to the resource
+        '404':
+          description: Resource not found
     post:
       summary: add permission to the resource
       operationId: setPermissionToResource
       tags:
         - permissions
       parameters:
-        - name: resourceId
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-            example: "sample00-id-0000-0000-quiz00000000"
-            description: "UUID of the resource"
+        - $ref: '#/components/parameters/resourceType'
+        - $ref: '#/components/parameters/resourceId'
       requestBody:
         description: Permission to add
         required: true
@@ -515,11 +532,37 @@ paths:
       responses:
         '200':
           description: Permission added to resource
-          #todo co my chcemy zwórcić?
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PermissionSummaryDto'
         '400':
           description: Bad request
         '403':
           description: User do not have permissions to set permission to the resource
+        '404':
+          description: Resource not found
+  /permissions/resources/{resourceType}/{resourceId}/users/{userId}:
+    get:
+      summary: get permission to the resource for specific user
+      operationId: getPermissionToResourceForUser
+      tags:
+        - permissions
+      parameters:
+        - $ref: '#/components/parameters/resourceType'
+        - $ref: '#/components/parameters/resourceId'
+        - $ref: '#/components/parameters/userId'
+      responses:
+        '200':
+          description: Permission to resource for user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PermissionSummaryDto'
+        '400':
+          description: Bad request
+        '403':
+          description: User do not have permissions to get information about user's permission to the resource
         '404':
           description: Resource not found
     put:
@@ -528,14 +571,9 @@ paths:
       tags:
         - permissions
       parameters:
-        - name: resourceId
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-            example: "sample00-id-0000-0000-quiz00000000"
-            description: "UUID of the resource"
+        - $ref: '#/components/parameters/resourceType'
+        - $ref: '#/components/parameters/resourceId'
+        - $ref: '#/components/parameters/userId'
       requestBody:
         description: Permission to edit
         required: true
@@ -546,40 +584,25 @@ paths:
       responses:
         '200':
           description: Permission edited to resource
-          #todo co my chcemy zwórcić?
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PermissionSummaryDto'
         '400':
           description: Bad request
         '403':
           description: User do not have permissions to set permission to the resource
         '404':
           description: Resource not found
-  /permissions/resources/{resourceType}/{resourceId}/users/{userId}:
     delete:
       summary: delete permission to the resource
       operationId: deletePermissionToResource
       tags:
         - permissions
       parameters:
-        - name: resourceType
-          in: path
-          required: true
-          schema:
-            $ref: '#/components/schemas/ResourceTypeDto'
-        - name: resourceId
-          in: path
-          required: true
-          schema:
-            type: string
-            format: uuid
-            example: "sample00-id-0000-0000-quiz00000000"
-            description: "UUID of the resource"
-        - name: userId
-          in: path
-          required: true
-          schema:
-            type: string
-            example: "123UserId321"
-            description: "id of the user"
+        - $ref: '#/components/parameters/resourceType'
+        - $ref: '#/components/parameters/resourceId'
+        - $ref: '#/components/parameters/userId'
       responses:
         '200':
           description: Permission to resource deleted
@@ -605,13 +628,13 @@ components:
           description: "Id of user"
           example: "1234"
         accessTypeDto:
-          type: string
-          description: "Type of access"
-          enum: [ rw, ro ]
-          example: rw
-        resourceTypeDto:
-          $ref: '#/components/schemas/ResourceTypeDto'
-      required: [ userId, accessTypeDto, resourceTypeDto ]
+          $ref: "#/components/schemas/AccessTypeDto"
+      required: [ userId, accessTypeDto ]
+    AccessTypeDto:
+      type: string
+      description: "Type of access"
+      enum: [ rw, ro ]
+      example: rw
     ResourceTypeDto:
       type: string
       description: "Type of resource"
@@ -724,6 +747,27 @@ components:
           type: string
           description: "Display name of the workspace"
           example: "Semestr 6"
+
+    PermissionSummaryDto:
+      type: object
+      description: "Summary of a permission"
+      required:
+        - userId
+        - resourceId
+        - accessLevel
+      properties:
+        userId:
+          type: string
+          example: "123UserId321"
+          description: "id of the user"
+        resourceId:
+          type: string
+          format: uuid
+          example: "sample00-id-0000-0000-quiz00000000"
+          description: "UUID of the resource"
+        accessLevel:
+          $ref: '#/components/schemas/AccessTypeDto'
+
     UserSummaryDto:
       type: object
       description: "Summary of a user"
@@ -952,6 +996,28 @@ components:
         type: integer
         format: int32
         example: 1
-
+    resourceId:
+      name: resourceId
+      in: path
+      required: true
+      schema:
+        type: string
+        format: uuid
+        example: "sample00-id-0000-0000-quiz00000000"
+        description: "UUID of the resource"
+    resourceType:
+      name: resourceType
+      in: path
+      required: true
+      schema:
+        $ref: '#/components/schemas/ResourceTypeDto'
+    userId:
+      name: userId
+      in: path
+      required: true
+      schema:
+        type: string
+        example: "123UserId321"
+        description: "id of the user"
 security:
   - bearerAuth: [ ]
